--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,14 +17,14 @@ URL: https://rivasiker.github.io/ggHoriPlot/,
         https://CRAN.R-project.org/package=ggHoriPlot
 BugReports: https://github.com/rivasiker/ggHoriPlot/issues
 Depends: ggplot2, R (>= 2.10)
-Imports: dplyr, glue, magrittr, stringr, tidyr
+Imports: dplyr, glue, magrittr, yulab.utils (>= 0.1.7), tidyr
 Suggests: ggthemes, knitr, patchwork, rmarkdown, testthat (>=
         3.0.0), tidyverse, utils
 VignetteBuilder: knitr
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.2.1
+RoxygenNote: 7.3.2
 NeedsCompilation: no
 Packaged: 2021-09-09 12:40:00 UTC; au595587
 Author: Iker Rivas-González [aut, cre]
