--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,6 @@ importFrom(stats,IQR)
 importFrom(stats,median)
 importFrom(stats,quantile)
 importFrom(stats,setNames)
-importFrom(stringr,str_detect)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,starts_with)
+importFrom(yulab.utils,str_detect)
